fixed alignment of report issue link

--- a/client/css/dashboard.css
+++ b/client/css/dashboard.css
@@ -23,4 +23,9 @@ body { margin-top: 20px; }
 .footer p.text-center {
   margin: 0;
 }
+
+#footer_buttons {
+  position: absolute;
+  right: 5px;
+}
 .container-fluid.max-height { margin-bottom: 30px; }
